--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -5,9 +5,11 @@
   h1{
      font-family: Arial, sans-serif;
      color: black;
+     text-align:center;
     }
   .center
   {
   margin-left:auto;
   margin-right:auto;
+  width: 35%;
   }
