--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,2 +1,6 @@
-<h1>Contact Us</h1>
- 
+<h2>Contact Us</h2>
+
+<br>
+<div class="center">
+<p><b>Toll-Free: (888) 387-4591<br><br> Email: cardmerchantsolutions@gmail.com<br><br>Fax: (312) 488-2655</b></p>
+</div>
