--- a/app/views/home/processing101.html.erb
+++ b/app/views/home/processing101.html.erb
@@ -1,11 +1,11 @@
-<h1>Processing 101</h1>
+<h2>Processing 101</h2>
 
 <body>
 <hr>
 <table> 
 	<tr>
         	<td><iframe width="560" height="315" align="middle" src="//www.youtube.com/embed/65VvwGjgj6w" frameborder="20" allowfullscreen></iframe></td>
-        	<td><p style="text-align:center";>is cracmmmmmmmmmm mmmmmmmmmmmmmmmm mmmm mmmmmmmmmmmmmmmm mmmmmmmmmmmmmmmmmmmm mm mmmmmmmmmmmmmmmmm mmmm mmmmmmmm mmmmmm mmmmmmmmm mmmmmmmmmm mmmmmmmmmmm mmmmmmmmmmm mmmm nnnnnra ?</p></td>
+        	<td><p style="text-align:center";><b>**Update** OCTOBER 1st 2015</b>, is the date that all merchants across the U.S will be expected to process their credit/debit card transactions with SMART CHIP (EMV) capable terminals. This new technology will ensure optimum security on your businesses credit/debit card tansactions. Will our current credit/debit cards, with the magnetic stripe, still work after that date ? Absolutely! While the card type transition takes place, all EMV terminals will be able to handle both, mag stripe and EMV, transactions.</p></td>
         </tr>
 </table>
 <hr>
