--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,9 +19,10 @@
     }
     
    h2{
-     font-family: Segoe UI; font-weight:600;
+     text-align:center;
+     font-family: Segoe UI; font-weight:700;
      color: black;
    }
-    
-    
+   
+
    
