--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,9 @@
  		<td><%= image_tag 'CMStm2.png' %> </td>
  		
  		<td>
+ 			<p>
+ 			<b>Toll-Free: (888) 387-4591</b>
+ 			</p>
  			<%= link_to "Home", home_index_path %> <br/>
  			<%= link_to "About Us", home_about_path %> <br/>
  			<%= link_to "Processing 101", home_processing101_path %> <br/>
