--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
- <h2>Welcome to Card Merchant Solutions!</h2>
+ <h2>Welcome too Card Merchant Solutions!</h2>
  
  <p>
  <b>Current Time/Date : <%= @time %></b>
