--- a/app/views/home/terminaloptions.html.erb
+++ b/app/views/home/terminaloptions.html.erb
@@ -11,7 +11,7 @@
 <hr>
 <br>
 <%= image_tag 'VerifoneVx520.png' %>
-<p style= 'font-family: Segoe UI; font-weight:600;'><h2>Verifone VX 520 Robust Performance that Leads and Exceeds</h2>The VX 520 is a reliable, rugged countertop device that's built to last. It handles encryption, decryption and processing at lightning speeds thanks to its powerful processor and expandable memory. Integrated NFC capabilities support alternative payments and also supports value-added applications such as loyalty or gift card acceptance.
+<p style= 'font-family: Segoe UI; font-weight:600;'><h2>Verifone VX 520 Robust - Performance that Leads and Exceeds</h2>The VX 520 is a reliable, rugged countertop device that's built to last. It handles encryption, decryption and processing at lightning speeds thanks to its powerful processor and expandable memory. Integrated NFC capabilities support alternative payments and also supports value-added applications such as loyalty or gift card acceptance.
 		A full range of connectivity options, from dial and Ethernet to GPRS, with an optional battery allows the VX 520 to go wherever you go. A uniquely designed communication port area underneath the device keeps countertops neat and free of clutter.</p></td>
 <br>
 </div>
