--- a/app/views/salesreps/_form.html.erb
+++ b/app/views/salesreps/_form.html.erb
@@ -1,17 +1,18 @@
-<script src="../_js/jquery-1.7.2.min.js"></script>
-<script>
-$(document).ready(function() {
+<!-- CODE BELOW was added as part of a class JS example code. Didnt really worked well after adding a new rep in the app. 
+#<script src="../_js/jquery-1.7.2.min.js"></script>
+#<script>
+#$(document).ready(function() {
  
     
-  $('#submission').focus(function()
-    {  
-     $(this).css('background-color', 'tan')    
-     alert("Check all data for accuracy. Then click the submit button again.");    
-    
-    }); //end focus       
-    
-         }); //end ready
-         </script>
+#  $('#submission').focus(function()
+#    {  
+#     $(this).css('background-color', 'tan')    
+#     alert("Check all data for accuracy. Then click the submit button again.");    
+   
+#    }); //end focus       
+   
+#         }); //end ready
+#         </script> -->
 
 
 
