cpay header changes

--- a/app/views/salesreps/_form.html.erb
+++ b/app/views/salesreps/_form.html.erb
@@ -1,4 +1,4 @@
-<!-- CODE BELOW was added as part of a class JS example code. Didnt really worked well after adding a new rep in the app. 
+<!-- CODE BELOW was added as part of a class JS example code. Didnt really work well after adding a new rep in the app. 
 #<script src="../_js/jquery-1.7.2.min.js"></script>
 #<script>
 #$(document).ready(function() {
