--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,19 +1,22 @@
 
 
 <table>
+	<tr>
+	        <td style="text-align:right"><%= link_to "Agent Login", salesreps_path %></td>
+		<td></td>
+		<td style="text-align:center"><b>Toll-Free: (888) 387-4591</b></td>
+	</tr>
  	<tr>
  		<td><%= image_tag 'CMStm2.png' %> </td>
  		
- 		<td>
- 			<p>
- 			<b>Toll-Free: (888) 387-4591</b>
- 			</p>
+ 		<td style="width:100%">
  			<%= link_to "Home", home_index_path %> <br/>
  			<%= link_to "About Us", home_about_path %> <br/>
  			<%= link_to "Processing 101", home_processing101_path %> <br/>
  			<%= link_to "Equipment Options", home_terminaloptions_path %> <br/>
  			<%= link_to "Contact us", home_contact_path %> <br/>
  		</td>
+ 		<td><%= image_tag 'cpayoval.png',:size => "300x88" %></td>
  	</tr>
 </table>
  
